Flatte1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     expression -> expression PLUS expression
Rule 3     expression -> expression MINUS expression
Rule 4     expression -> expression TIMES expression
Rule 5     expression -> expression DIVIDE expression
Rule 6     expression -> expression MOD expression
Rule 7     expression -> expression EQUALS expression
Rule 8     expression -> expression LEQ expression
Rule 9     expression -> expression LT expression
Rule 10    expression -> expression GEQ expression
Rule 11    expression -> expression GT expression
Rule 12    expression -> expression AND expression
Rule 13    expression -> expression OR expression
Rule 14    expression -> expression NOTEQUALS expression
Rule 15    expression -> MINUS expression
Rule 16    expression -> NOT expression
Rule 17    expression -> LET NAME EQUALS expression IN expression
Rule 18    expression -> IF expression THEN expression ELSE expression
Rule 19    expression -> basicexpression
Rule 20    basicexpression -> LPAREN expression RPAREN
Rule 21    basicexpression -> TRUE
Rule 22    basicexpression -> FALSE
Rule 23    basicexpression -> NUMBER
Rule 24    basicexpression -> NAME

Terminals, with rules where they appear

AND                  : 12
DIVIDE               : 5
ELSE                 : 18
EQUALS               : 7 17
FALSE                : 22
GEQ                  : 10
GT                   : 11
IF                   : 18
IN                   : 17
LEQ                  : 8
LET                  : 17
LPAREN               : 20
LT                   : 9
MINUS                : 3 15
MOD                  : 6
NAME                 : 17 24
NOT                  : 16
NOTEQUALS            : 14
NUMBER               : 23
OR                   : 13
PLUS                 : 2
RPAREN               : 20
THEN                 : 18
TIMES                : 4
TRUE                 : 21
error                : 

Nonterminals, with rules where they appear

basicexpression      : 19
expression           : 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 16 17 17 18 18 18 20
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression EQUALS expression
    (8) expression -> . expression LEQ expression
    (9) expression -> . expression LT expression
    (10) expression -> . expression GEQ expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression NOTEQUALS expression
    (15) expression -> . MINUS expression
    (16) expression -> . NOT expression
    (17) expression -> . LET NAME EQUALS expression IN expression
    (18) expression -> . IF expression THEN expression ELSE expression
    (19) expression -> . basicexpression
    (20) basicexpression -> . LPAREN expression RPAREN
    (21) basicexpression -> . TRUE
    (22) basicexpression -> . FALSE
    (23) basicexpression -> . NUMBER
    (24) basicexpression -> . NAME

    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LET             shift and go to state 10
    IF              shift and go to state 7
    LPAREN          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 8
    NUMBER          shift and go to state 1
    NAME            shift and go to state 9

    basicexpression                shift and go to state 2
    expression                     shift and go to state 12
    statement                      shift and go to state 5

state 1

    (23) basicexpression -> NUMBER .

    PLUS            reduce using rule 23 (basicexpression -> NUMBER .)
    MINUS           reduce using rule 23 (basicexpression -> NUMBER .)
    TIMES           reduce using rule 23 (basicexpression -> NUMBER .)
    DIVIDE          reduce using rule 23 (basicexpression -> NUMBER .)
    MOD             reduce using rule 23 (basicexpression -> NUMBER .)
    EQUALS          reduce using rule 23 (basicexpression -> NUMBER .)
    LEQ             reduce using rule 23 (basicexpression -> NUMBER .)
    LT              reduce using rule 23 (basicexpression -> NUMBER .)
    GEQ             reduce using rule 23 (basicexpression -> NUMBER .)
    GT              reduce using rule 23 (basicexpression -> NUMBER .)
    AND             reduce using rule 23 (basicexpression -> NUMBER .)
    OR              reduce using rule 23 (basicexpression -> NUMBER .)
    NOTEQUALS       reduce using rule 23 (basicexpression -> NUMBER .)
    $end            reduce using rule 23 (basicexpression -> NUMBER .)
    RPAREN          reduce using rule 23 (basicexpression -> NUMBER .)
    THEN            reduce using rule 23 (basicexpression -> NUMBER .)
    ELSE            reduce using rule 23 (basicexpression -> NUMBER .)
    IN              reduce using rule 23 (basicexpression -> NUMBER .)


state 2

    (19) expression -> basicexpression .

    PLUS            reduce using rule 19 (expression -> basicexpression .)
    MINUS           reduce using rule 19 (expression -> basicexpression .)
    TIMES           reduce using rule 19 (expression -> basicexpression .)
    DIVIDE          reduce using rule 19 (expression -> basicexpression .)
    MOD             reduce using rule 19 (expression -> basicexpression .)
    EQUALS          reduce using rule 19 (expression -> basicexpression .)
    LEQ             reduce using rule 19 (expression -> basicexpression .)
    LT              reduce using rule 19 (expression -> basicexpression .)
    GEQ             reduce using rule 19 (expression -> basicexpression .)
    GT              reduce using rule 19 (expression -> basicexpression .)
    AND             reduce using rule 19 (expression -> basicexpression .)
    OR              reduce using rule 19 (expression -> basicexpression .)
    NOTEQUALS       reduce using rule 19 (expression -> basicexpression .)
    $end            reduce using rule 19 (expression -> basicexpression .)
    RPAREN          reduce using rule 19 (expression -> basicexpression .)
    THEN            reduce using rule 19 (expression -> basicexpression .)
    ELSE            reduce using rule 19 (expression -> basicexpression .)
    IN              reduce using rule 19 (expression -> basicexpression .)


state 3

    (21) basicexpression -> TRUE .

    PLUS            reduce using rule 21 (basicexpression -> TRUE .)
    MINUS           reduce using rule 21 (basicexpression -> TRUE .)
    TIMES           reduce using rule 21 (basicexpression -> TRUE .)
    DIVIDE          reduce using rule 21 (basicexpression -> TRUE .)
    MOD             reduce using rule 21 (basicexpression -> TRUE .)
    EQUALS          reduce using rule 21 (basicexpression -> TRUE .)
    LEQ             reduce using rule 21 (basicexpression -> TRUE .)
    LT              reduce using rule 21 (basicexpression -> TRUE .)
    GEQ             reduce using rule 21 (basicexpression -> TRUE .)
    GT              reduce using rule 21 (basicexpression -> TRUE .)
    AND             reduce using rule 21 (basicexpression -> TRUE .)
    OR              reduce using rule 21 (basicexpression -> TRUE .)
    NOTEQUALS       reduce using rule 21 (basicexpression -> TRUE .)
    $end            reduce using rule 21 (basicexpression -> TRUE .)
    RPAREN          reduce using rule 21 (basicexpression -> TRUE .)
    THEN            reduce using rule 21 (basicexpression -> TRUE .)
    ELSE            reduce using rule 21 (basicexpression -> TRUE .)
    IN              reduce using rule 21 (basicexpression -> TRUE .)


state 4

    (15) expression -> MINUS . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression EQUALS expression
    (8) expression -> . expression LEQ expression
    (9) expression -> . expression LT expression
    (10) expression -> . expression GEQ expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression NOTEQUALS expression
    (15) expression -> . MINUS expression
    (16) expression -> . NOT expression
    (17) expression -> . LET NAME EQUALS expression IN expression
    (18) expression -> . IF expression THEN expression ELSE expression
    (19) expression -> . basicexpression
    (20) basicexpression -> . LPAREN expression RPAREN
    (21) basicexpression -> . TRUE
    (22) basicexpression -> . FALSE
    (23) basicexpression -> . NUMBER
    (24) basicexpression -> . NAME

    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LET             shift and go to state 10
    IF              shift and go to state 7
    LPAREN          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 8
    NUMBER          shift and go to state 1
    NAME            shift and go to state 9

    basicexpression                shift and go to state 2
    expression                     shift and go to state 13

state 5

    (0) S' -> statement .



state 6

    (20) basicexpression -> LPAREN . expression RPAREN
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression EQUALS expression
    (8) expression -> . expression LEQ expression
    (9) expression -> . expression LT expression
    (10) expression -> . expression GEQ expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression NOTEQUALS expression
    (15) expression -> . MINUS expression
    (16) expression -> . NOT expression
    (17) expression -> . LET NAME EQUALS expression IN expression
    (18) expression -> . IF expression THEN expression ELSE expression
    (19) expression -> . basicexpression
    (20) basicexpression -> . LPAREN expression RPAREN
    (21) basicexpression -> . TRUE
    (22) basicexpression -> . FALSE
    (23) basicexpression -> . NUMBER
    (24) basicexpression -> . NAME

    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LET             shift and go to state 10
    IF              shift and go to state 7
    LPAREN          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 8
    NUMBER          shift and go to state 1
    NAME            shift and go to state 9

    basicexpression                shift and go to state 2
    expression                     shift and go to state 14

state 7

    (18) expression -> IF . expression THEN expression ELSE expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression EQUALS expression
    (8) expression -> . expression LEQ expression
    (9) expression -> . expression LT expression
    (10) expression -> . expression GEQ expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression NOTEQUALS expression
    (15) expression -> . MINUS expression
    (16) expression -> . NOT expression
    (17) expression -> . LET NAME EQUALS expression IN expression
    (18) expression -> . IF expression THEN expression ELSE expression
    (19) expression -> . basicexpression
    (20) basicexpression -> . LPAREN expression RPAREN
    (21) basicexpression -> . TRUE
    (22) basicexpression -> . FALSE
    (23) basicexpression -> . NUMBER
    (24) basicexpression -> . NAME

    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LET             shift and go to state 10
    IF              shift and go to state 7
    LPAREN          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 8
    NUMBER          shift and go to state 1
    NAME            shift and go to state 9

    basicexpression                shift and go to state 2
    expression                     shift and go to state 15

state 8

    (22) basicexpression -> FALSE .

    PLUS            reduce using rule 22 (basicexpression -> FALSE .)
    MINUS           reduce using rule 22 (basicexpression -> FALSE .)
    TIMES           reduce using rule 22 (basicexpression -> FALSE .)
    DIVIDE          reduce using rule 22 (basicexpression -> FALSE .)
    MOD             reduce using rule 22 (basicexpression -> FALSE .)
    EQUALS          reduce using rule 22 (basicexpression -> FALSE .)
    LEQ             reduce using rule 22 (basicexpression -> FALSE .)
    LT              reduce using rule 22 (basicexpression -> FALSE .)
    GEQ             reduce using rule 22 (basicexpression -> FALSE .)
    GT              reduce using rule 22 (basicexpression -> FALSE .)
    AND             reduce using rule 22 (basicexpression -> FALSE .)
    OR              reduce using rule 22 (basicexpression -> FALSE .)
    NOTEQUALS       reduce using rule 22 (basicexpression -> FALSE .)
    $end            reduce using rule 22 (basicexpression -> FALSE .)
    RPAREN          reduce using rule 22 (basicexpression -> FALSE .)
    THEN            reduce using rule 22 (basicexpression -> FALSE .)
    ELSE            reduce using rule 22 (basicexpression -> FALSE .)
    IN              reduce using rule 22 (basicexpression -> FALSE .)


state 9

    (24) basicexpression -> NAME .

    PLUS            reduce using rule 24 (basicexpression -> NAME .)
    MINUS           reduce using rule 24 (basicexpression -> NAME .)
    TIMES           reduce using rule 24 (basicexpression -> NAME .)
    DIVIDE          reduce using rule 24 (basicexpression -> NAME .)
    MOD             reduce using rule 24 (basicexpression -> NAME .)
    EQUALS          reduce using rule 24 (basicexpression -> NAME .)
    LEQ             reduce using rule 24 (basicexpression -> NAME .)
    LT              reduce using rule 24 (basicexpression -> NAME .)
    GEQ             reduce using rule 24 (basicexpression -> NAME .)
    GT              reduce using rule 24 (basicexpression -> NAME .)
    AND             reduce using rule 24 (basicexpression -> NAME .)
    OR              reduce using rule 24 (basicexpression -> NAME .)
    NOTEQUALS       reduce using rule 24 (basicexpression -> NAME .)
    $end            reduce using rule 24 (basicexpression -> NAME .)
    RPAREN          reduce using rule 24 (basicexpression -> NAME .)
    THEN            reduce using rule 24 (basicexpression -> NAME .)
    ELSE            reduce using rule 24 (basicexpression -> NAME .)
    IN              reduce using rule 24 (basicexpression -> NAME .)


state 10

    (17) expression -> LET . NAME EQUALS expression IN expression

    NAME            shift and go to state 16


state 11

    (16) expression -> NOT . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression EQUALS expression
    (8) expression -> . expression LEQ expression
    (9) expression -> . expression LT expression
    (10) expression -> . expression GEQ expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression NOTEQUALS expression
    (15) expression -> . MINUS expression
    (16) expression -> . NOT expression
    (17) expression -> . LET NAME EQUALS expression IN expression
    (18) expression -> . IF expression THEN expression ELSE expression
    (19) expression -> . basicexpression
    (20) basicexpression -> . LPAREN expression RPAREN
    (21) basicexpression -> . TRUE
    (22) basicexpression -> . FALSE
    (23) basicexpression -> . NUMBER
    (24) basicexpression -> . NAME

    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LET             shift and go to state 10
    IF              shift and go to state 7
    LPAREN          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 8
    NUMBER          shift and go to state 1
    NAME            shift and go to state 9

    basicexpression                shift and go to state 2
    expression                     shift and go to state 17

state 12

    (1) statement -> expression .
    (2) expression -> expression . PLUS expression
    (3) expression -> expression . MINUS expression
    (4) expression -> expression . TIMES expression
    (5) expression -> expression . DIVIDE expression
    (6) expression -> expression . MOD expression
    (7) expression -> expression . EQUALS expression
    (8) expression -> expression . LEQ expression
    (9) expression -> expression . LT expression
    (10) expression -> expression . GEQ expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . NOTEQUALS expression

    $end            reduce using rule 1 (statement -> expression .)
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 22
    MOD             shift and go to state 30
    EQUALS          shift and go to state 24
    LEQ             shift and go to state 26
    LT              shift and go to state 27
    GEQ             shift and go to state 20
    GT              shift and go to state 21
    AND             shift and go to state 18
    OR              shift and go to state 19
    NOTEQUALS       shift and go to state 23


state 13

    (15) expression -> MINUS expression .
    (2) expression -> expression . PLUS expression
    (3) expression -> expression . MINUS expression
    (4) expression -> expression . TIMES expression
    (5) expression -> expression . DIVIDE expression
    (6) expression -> expression . MOD expression
    (7) expression -> expression . EQUALS expression
    (8) expression -> expression . LEQ expression
    (9) expression -> expression . LT expression
    (10) expression -> expression . GEQ expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . NOTEQUALS expression

    PLUS            reduce using rule 15 (expression -> MINUS expression .)
    MINUS           reduce using rule 15 (expression -> MINUS expression .)
    TIMES           reduce using rule 15 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 15 (expression -> MINUS expression .)
    MOD             reduce using rule 15 (expression -> MINUS expression .)
    EQUALS          reduce using rule 15 (expression -> MINUS expression .)
    LEQ             reduce using rule 15 (expression -> MINUS expression .)
    LT              reduce using rule 15 (expression -> MINUS expression .)
    GEQ             reduce using rule 15 (expression -> MINUS expression .)
    GT              reduce using rule 15 (expression -> MINUS expression .)
    AND             reduce using rule 15 (expression -> MINUS expression .)
    OR              reduce using rule 15 (expression -> MINUS expression .)
    NOTEQUALS       reduce using rule 15 (expression -> MINUS expression .)
    $end            reduce using rule 15 (expression -> MINUS expression .)
    RPAREN          reduce using rule 15 (expression -> MINUS expression .)
    THEN            reduce using rule 15 (expression -> MINUS expression .)
    ELSE            reduce using rule 15 (expression -> MINUS expression .)
    IN              reduce using rule 15 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 28 ]
  ! MINUS           [ shift and go to state 29 ]
  ! TIMES           [ shift and go to state 25 ]
  ! DIVIDE          [ shift and go to state 22 ]
  ! MOD             [ shift and go to state 30 ]
  ! EQUALS          [ shift and go to state 24 ]
  ! LEQ             [ shift and go to state 26 ]
  ! LT              [ shift and go to state 27 ]
  ! GEQ             [ shift and go to state 20 ]
  ! GT              [ shift and go to state 21 ]
  ! AND             [ shift and go to state 18 ]
  ! OR              [ shift and go to state 19 ]
  ! NOTEQUALS       [ shift and go to state 23 ]


state 14

    (20) basicexpression -> LPAREN expression . RPAREN
    (2) expression -> expression . PLUS expression
    (3) expression -> expression . MINUS expression
    (4) expression -> expression . TIMES expression
    (5) expression -> expression . DIVIDE expression
    (6) expression -> expression . MOD expression
    (7) expression -> expression . EQUALS expression
    (8) expression -> expression . LEQ expression
    (9) expression -> expression . LT expression
    (10) expression -> expression . GEQ expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . NOTEQUALS expression

    RPAREN          shift and go to state 31
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 22
    MOD             shift and go to state 30
    EQUALS          shift and go to state 24
    LEQ             shift and go to state 26
    LT              shift and go to state 27
    GEQ             shift and go to state 20
    GT              shift and go to state 21
    AND             shift and go to state 18
    OR              shift and go to state 19
    NOTEQUALS       shift and go to state 23


state 15

    (18) expression -> IF expression . THEN expression ELSE expression
    (2) expression -> expression . PLUS expression
    (3) expression -> expression . MINUS expression
    (4) expression -> expression . TIMES expression
    (5) expression -> expression . DIVIDE expression
    (6) expression -> expression . MOD expression
    (7) expression -> expression . EQUALS expression
    (8) expression -> expression . LEQ expression
    (9) expression -> expression . LT expression
    (10) expression -> expression . GEQ expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . NOTEQUALS expression

    THEN            shift and go to state 32
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 22
    MOD             shift and go to state 30
    EQUALS          shift and go to state 24
    LEQ             shift and go to state 26
    LT              shift and go to state 27
    GEQ             shift and go to state 20
    GT              shift and go to state 21
    AND             shift and go to state 18
    OR              shift and go to state 19
    NOTEQUALS       shift and go to state 23


state 16

    (17) expression -> LET NAME . EQUALS expression IN expression

    EQUALS          shift and go to state 33


state 17

    (16) expression -> NOT expression .
    (2) expression -> expression . PLUS expression
    (3) expression -> expression . MINUS expression
    (4) expression -> expression . TIMES expression
    (5) expression -> expression . DIVIDE expression
    (6) expression -> expression . MOD expression
    (7) expression -> expression . EQUALS expression
    (8) expression -> expression . LEQ expression
    (9) expression -> expression . LT expression
    (10) expression -> expression . GEQ expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . NOTEQUALS expression

    PLUS            reduce using rule 16 (expression -> NOT expression .)
    MINUS           reduce using rule 16 (expression -> NOT expression .)
    TIMES           reduce using rule 16 (expression -> NOT expression .)
    DIVIDE          reduce using rule 16 (expression -> NOT expression .)
    MOD             reduce using rule 16 (expression -> NOT expression .)
    EQUALS          reduce using rule 16 (expression -> NOT expression .)
    LEQ             reduce using rule 16 (expression -> NOT expression .)
    LT              reduce using rule 16 (expression -> NOT expression .)
    GEQ             reduce using rule 16 (expression -> NOT expression .)
    GT              reduce using rule 16 (expression -> NOT expression .)
    AND             reduce using rule 16 (expression -> NOT expression .)
    OR              reduce using rule 16 (expression -> NOT expression .)
    NOTEQUALS       reduce using rule 16 (expression -> NOT expression .)
    $end            reduce using rule 16 (expression -> NOT expression .)
    RPAREN          reduce using rule 16 (expression -> NOT expression .)
    THEN            reduce using rule 16 (expression -> NOT expression .)
    ELSE            reduce using rule 16 (expression -> NOT expression .)
    IN              reduce using rule 16 (expression -> NOT expression .)

  ! PLUS            [ shift and go to state 28 ]
  ! MINUS           [ shift and go to state 29 ]
  ! TIMES           [ shift and go to state 25 ]
  ! DIVIDE          [ shift and go to state 22 ]
  ! MOD             [ shift and go to state 30 ]
  ! EQUALS          [ shift and go to state 24 ]
  ! LEQ             [ shift and go to state 26 ]
  ! LT              [ shift and go to state 27 ]
  ! GEQ             [ shift and go to state 20 ]
  ! GT              [ shift and go to state 21 ]
  ! AND             [ shift and go to state 18 ]
  ! OR              [ shift and go to state 19 ]
  ! NOTEQUALS       [ shift and go to state 23 ]


state 18

    (12) expression -> expression AND . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression EQUALS expression
    (8) expression -> . expression LEQ expression
    (9) expression -> . expression LT expression
    (10) expression -> . expression GEQ expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression NOTEQUALS expression
    (15) expression -> . MINUS expression
    (16) expression -> . NOT expression
    (17) expression -> . LET NAME EQUALS expression IN expression
    (18) expression -> . IF expression THEN expression ELSE expression
    (19) expression -> . basicexpression
    (20) basicexpression -> . LPAREN expression RPAREN
    (21) basicexpression -> . TRUE
    (22) basicexpression -> . FALSE
    (23) basicexpression -> . NUMBER
    (24) basicexpression -> . NAME

    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LET             shift and go to state 10
    IF              shift and go to state 7
    LPAREN          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 8
    NUMBER          shift and go to state 1
    NAME            shift and go to state 9

    basicexpression                shift and go to state 2
    expression                     shift and go to state 34

state 19

    (13) expression -> expression OR . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression EQUALS expression
    (8) expression -> . expression LEQ expression
    (9) expression -> . expression LT expression
    (10) expression -> . expression GEQ expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression NOTEQUALS expression
    (15) expression -> . MINUS expression
    (16) expression -> . NOT expression
    (17) expression -> . LET NAME EQUALS expression IN expression
    (18) expression -> . IF expression THEN expression ELSE expression
    (19) expression -> . basicexpression
    (20) basicexpression -> . LPAREN expression RPAREN
    (21) basicexpression -> . TRUE
    (22) basicexpression -> . FALSE
    (23) basicexpression -> . NUMBER
    (24) basicexpression -> . NAME

    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LET             shift and go to state 10
    IF              shift and go to state 7
    LPAREN          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 8
    NUMBER          shift and go to state 1
    NAME            shift and go to state 9

    basicexpression                shift and go to state 2
    expression                     shift and go to state 35

state 20

    (10) expression -> expression GEQ . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression EQUALS expression
    (8) expression -> . expression LEQ expression
    (9) expression -> . expression LT expression
    (10) expression -> . expression GEQ expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression NOTEQUALS expression
    (15) expression -> . MINUS expression
    (16) expression -> . NOT expression
    (17) expression -> . LET NAME EQUALS expression IN expression
    (18) expression -> . IF expression THEN expression ELSE expression
    (19) expression -> . basicexpression
    (20) basicexpression -> . LPAREN expression RPAREN
    (21) basicexpression -> . TRUE
    (22) basicexpression -> . FALSE
    (23) basicexpression -> . NUMBER
    (24) basicexpression -> . NAME

    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LET             shift and go to state 10
    IF              shift and go to state 7
    LPAREN          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 8
    NUMBER          shift and go to state 1
    NAME            shift and go to state 9

    basicexpression                shift and go to state 2
    expression                     shift and go to state 36

state 21

    (11) expression -> expression GT . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression EQUALS expression
    (8) expression -> . expression LEQ expression
    (9) expression -> . expression LT expression
    (10) expression -> . expression GEQ expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression NOTEQUALS expression
    (15) expression -> . MINUS expression
    (16) expression -> . NOT expression
    (17) expression -> . LET NAME EQUALS expression IN expression
    (18) expression -> . IF expression THEN expression ELSE expression
    (19) expression -> . basicexpression
    (20) basicexpression -> . LPAREN expression RPAREN
    (21) basicexpression -> . TRUE
    (22) basicexpression -> . FALSE
    (23) basicexpression -> . NUMBER
    (24) basicexpression -> . NAME

    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LET             shift and go to state 10
    IF              shift and go to state 7
    LPAREN          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 8
    NUMBER          shift and go to state 1
    NAME            shift and go to state 9

    basicexpression                shift and go to state 2
    expression                     shift and go to state 37

state 22

    (5) expression -> expression DIVIDE . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression EQUALS expression
    (8) expression -> . expression LEQ expression
    (9) expression -> . expression LT expression
    (10) expression -> . expression GEQ expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression NOTEQUALS expression
    (15) expression -> . MINUS expression
    (16) expression -> . NOT expression
    (17) expression -> . LET NAME EQUALS expression IN expression
    (18) expression -> . IF expression THEN expression ELSE expression
    (19) expression -> . basicexpression
    (20) basicexpression -> . LPAREN expression RPAREN
    (21) basicexpression -> . TRUE
    (22) basicexpression -> . FALSE
    (23) basicexpression -> . NUMBER
    (24) basicexpression -> . NAME

    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LET             shift and go to state 10
    IF              shift and go to state 7
    LPAREN          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 8
    NUMBER          shift and go to state 1
    NAME            shift and go to state 9

    basicexpression                shift and go to state 2
    expression                     shift and go to state 38

state 23
